--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1,1 +1,9 @@
+{
+  "lang": "de",
 
+  "slogan": "Unabhängig. Kreativ. Bewegend.",
+
+  "home": "Startseite",
+  "legal_notice": "Impressum",
+  "privacy_policy": "Datenschutz"
+}
