--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,5 +1,6 @@
 {
   "lang": "en",
+  "language_button": "DE",
 
   "slogan": "Independent. Creative. Moving.",
   "home": "Home",
@@ -7,14 +8,14 @@
   "privacy_policy": "Privacy policy",
 
   "introduction_heading": "Wer wir sind",
-  "introduction_content": "Wir sind **TFL Studios**, ein Newcomer in der Indie-Filmbranche. Wir haben es uns zum Ziel gemacht, [...]",
+  "introduction_content": "We are **TFL Studios**, a newcomer in the indie film industry. Our goal is to [...]",
 
   "projects_heading": "Upcoming projects",
-  "project_1_description": "Unser Pilotprojekt **365 Days of Dead** spielt in einer alternativen Gegenwart, in der die USA nach dem Zweiten Weltkrieg eine „vereinte Nation“ gegründet haben. Doch eine Katastrophe verwandelt die Welt in eine postapokalyptische Landschaft voller Untoter. Die Überlebenden kämpfen nicht nur ums Überleben, sondern auch darum, eine neue Gesellschaft aufzubauen. Über sieben Staffeln erzählen wir ihre Geschichte voller Action, Drama und Hoffnung in einer zerstörten Welt.",
-  "project_2_description": "Die Horror-Thriller **We are not alone 1983** entführt dich in eine düstere Welt voller Verschwörungen und Geheimnisse. Im Jahr 1983 gelangt die Aktivistengruppe „Wiedergeburt“ an geheime Atomcodes und bringt damit die Welt an den Rand eines nuklearen Winters. In drei spannungsgeladenen Filmen verfolgen wir die dunklen Folgen ihres Handelns und den verzweifelten Kampf ums Überleben in einer eisigen, bedrohlichen Welt.",
+  "project_1_description": "Our pilot project **365 Days of Dead** is set in an alternate present where, after World War II, the USA founded a “United Nation.” But a catastrophe transforms the world into a post-apocalyptic landscape filled with the undead. The survivors fight not only for survival but also to build a new society. Over seven seasons, we tell their story—a tale full of action, drama, and hope in a shattered world.",
+  "project_2_description": "The horror-thriller **We Are Not Alone 1983** takes you into a dark world full of conspiracies and secrets. In 1983, the activist group “Wiedergeburt” obtains secret nuclear codes, pushing the world to the brink of a nuclear winter. Across three gripping films, we follow the grim consequences of their actions and the desperate struggle to survive in an icy, threatening world.",
 
   "application_heading": "Want to join us?",
-  "application_content": "Ob Kamera oder Schnitt, Maske oder Schauspiel – wir suchen kreative Köpfe, die Lust haben, Teil eines engagierten Filmteams zu werden. Du möchtest mit uns außergewöhnliche Geschichten erzählen? Dann werde Teil unseres Projekts!",
+  "application_content": "Whether behind the camera, editing footage, handling makeup, or acting — we’re looking for creative minds eager to join a dedicated film team. Want to help us tell extraordinary stories? Then become part of our project!",
   "application_button": "Application form",
   "application_link": "https://docs.google.com/forms/d/e/1FAIpQLSe90zevspPSXs3kFhMyqJ3SMmvvO0OD1zQ9aj8qYD1p7AVnmQ/viewform?usp=pp_url"
 }
