--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,13 +1,12 @@
 {
   "lang": "en",
-  "language_button": "DE",
 
   "slogan": "Independent. Creative. Moving.",
   "home": "Home",
   "legal_notice": "Legal notice",
   "privacy_policy": "Privacy policy",
 
-  "introduction_heading": "Wer wir sind",
+  "introduction_heading": "About us",
   "introduction_content": "We are **TFL Studios**, a newcomer in the indie film industry. Our goal is to [...]",
 
   "projects_heading": "Upcoming projects",
