--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -7,7 +7,7 @@
   "privacy_policy": "Datenschutz",
 
   "introduction_heading": "Wer wir sind",
-  "introduction_content": "Wir sind **TFL Studios**, ein Newcomer in der Indie-Filmbranche. Wir haben es uns zum Ziel gemacht, [...]",
+  "introduction_content": "Wir sind **TFL Studios**, ein Newcomer in der Indie-Filmbranche. Wir haben es uns zum Ziel gemacht, Filme zu drehen, ohne auf riesige Budgets oder Studios zu warten. Wir wollen zeigen, dass gute Geschichten mit Leidenschaft und Liebe zum Handwerk entstehen – und wir hoffen, damit andere zu inspirieren, selbst zur Kamera zu greifen.",
 
   "projects_heading": "Bevorstehende Filmprojekte",
   "project_1_description": "Unser Pilotprojekt **365 Days of Dead** spielt in einer alternativen Gegenwart, in der die USA nach dem Zweiten Weltkrieg eine „vereinte Nation“ gegründet haben. Doch eine Katastrophe verwandelt die Welt in eine postapokalyptische Landschaft voller Untoter. Die Überlebenden kämpfen nicht nur ums Überleben, sondern auch darum, eine neue Gesellschaft aufzubauen. Über sieben Staffeln erzählen wir ihre Geschichte voller Action, Drama und Hoffnung in einer zerstörten Welt.",
