--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -7,14 +7,14 @@
   "privacy_policy": "Privacy policy",
 
   "introduction_heading": "About us",
-  "introduction_content": "We are **TFL Studios**, a newcomer in the indie film industry. Our goal is to [...]",
+  "introduction_content": "We are **TFL Studios**, a newcomer to the indie film scene. Our goal is to create films without waiting for big budgets or studio backing. We want to prove that great stories are born from passion and love for the craft – and we hope to inspire others to pick up a camera and start creating too.",
 
   "projects_heading": "Upcoming projects",
-  "project_1_description": "Our pilot project **365 Days of Dead** is set in an alternate present where, after World War II, the USA founded a “United Nation.” But a catastrophe transforms the world into a post-apocalyptic landscape filled with the undead. The survivors fight not only for survival but also to build a new society. Over seven seasons, we tell their story—a tale full of action, drama, and hope in a shattered world.",
-  "project_2_description": "The horror-thriller **We Are Not Alone 1983** takes you into a dark world full of conspiracies and secrets. In 1983, the activist group “Wiedergeburt” obtains secret nuclear codes, pushing the world to the brink of a nuclear winter. Across three gripping films, we follow the grim consequences of their actions and the desperate struggle to survive in an icy, threatening world.",
+  "project_1_description": "Our pilot project **365 Days of Dead** is set in an alternate present where, after World War II, the USA founded a “United Nation.” But a catastrophe transforms the world into a post-apocalyptic landscape filled with the undead. The survivors fight not only for survival but also to build a new society. Over seven seasons, we tell their story – a tale full of action, drama, and hope in a shattered world.",
+  "project_2_description": "The horror-thriller **We Are Not Alone 1983** takes you into a dark world full of conspiracies and secrets. In 1983, the activist group “Rebirth” obtains secret nuclear codes, pushing the world to the brink of a nuclear winter. Across three gripping films, we follow the grim consequences of their actions and the desperate struggle to survive in an icy, threatening world.",
 
   "application_heading": "Want to join us?",
-  "application_content": "Whether behind the camera, editing footage, handling makeup, or acting — we’re looking for creative minds eager to join a dedicated film team. Want to help us tell extraordinary stories? Then become part of our project!",
+  "application_content": "Whether behind the camera, editing footage, handling makeup, or acting — we’re looking for creative minds eager to join a dedicated film team. Want to help us tell extraordinary stories? Join our project!",
   "application_button": "Application form",
   "application_link": "https://docs.google.com/forms/d/e/1FAIpQLSe90zevspPSXs3kFhMyqJ3SMmvvO0OD1zQ9aj8qYD1p7AVnmQ/viewform?usp=pp_url"
 }
