--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -3,8 +3,20 @@
 
   "slogan": "Unabhängig. Kreativ. Bewegend.",
   "home": "Startseite",
+
   "legal_notice": "Impressum",
+  "legal_notice_introduction": "Angaben gemäß § 5 TMG:",
+  "representative": "Vertreten durch:",
+  "responsible": "Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:",
+  "liability_for_content": "Haftung für Inhalte",
+  "liability_for_content_notice": "Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Eine Verpflichtung zur Überwachung übermittelter oder gespeicherter fremder Informationen besteht jedoch nicht (§§ 8–10 TMG).",
+  "liability_for_links": "Haftung für Links",
+  "liability_for_links_notice": "Unsere Website enthält ggf. Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Für diese fremden Inhalte übernehmen wir keine Gewähr. Verantwortlich ist stets der jeweilige Anbieter oder Betreiber der Seiten.",
+  "copyright": "Urheberrecht",
+  "copyright_notice": "Die durch uns erstellten Inhalte und Werke auf dieser Website unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung oder Verbreitung außerhalb der Grenzen des Urheberrechts bedarf der schriftlichen Zustimmung des jeweiligen Autors.",
+
   "privacy_policy": "Datenschutz",
+  "privacy_policy_introduction": "Wir freuen uns über Ihr Interesse an unserem Filmstudio und unserer Website.",
 
   "introduction_heading": "Wer wir sind",
   "introduction_content": "Wir sind **TFL Studios**, ein Newcomer in der Indie-Filmbranche. Wir haben es uns zum Ziel gemacht, Filme zu drehen, ohne auf riesige Budgets oder Studios zu warten. Wir wollen zeigen, dass gute Geschichten mit Leidenschaft und Liebe zum Handwerk entstehen – und wir hoffen, damit andere zu inspirieren, selbst zur Kamera zu greifen.",
